# Master-Project-Eirik-Skjerve

./: .gitignore  README.md
Drafts/: '  HPPGaussian.tex  attack.tex  (+4 more)
hawk_rust/: Cargo.toml
hawk_rust/src/: benchmark.rs  cdt.rs  codec.rs  compress.rs  decompress.rs  fft.rs  fft_constants.rs  grutils.rs  hawk_tests.rs  hawkkeygen.rs  hawksign.rs  hawkverify.rs  keygen.rs  main.rs  main.rs~  ntru_solve.rs  ntt.rs  ntt_constants.rs  ntt_fft.rs  params.rs  refactor.rs  rngcontext.rs  sign.rs  tests.rs  utils.rs  verify.rs  verifyutils.rs  write_to_file.rs
hawk_rust/src/compression/: codec.rs  compress.rs  decompress.rs  grutils.rs  mod.rs
hawk_rust/src/cryptanalysis/: mod.rs
hawk_rust/src/cryptanalysis/HPP/: HPP_attack1.py  HPP_attack2.py  gradient_descent.rs  hpp.rs  mod.rs  sample_signatures.rs  script.py
hawk_rust/src/hawk1024/: codec_1024.rs  hawkkeygen_1024.rs  hawksign_1024.rs  hawkverify_1024.rs  mod.rs  verifyutils_1024.rs
hawk_rust/src/hawk256/: codec_256.rs  hawkkeygen_256.rs  hawksign_256.rs  hawkverify_256.rs  mod.rs  verifyutils_256.rs
hawk_rust/src/hawk512/: codec_512.rs  hawkkeygen_512.rs  hawksign_512.rs  hawkverify_512.rs  mod.rs
hawk_rust/src/linalg/: matrix.rs
hawk_rust/src/output/: testouot.txt
hawk_rust/src/parameters/: hawk1024_params.rs  hawk256_params.rs  hawk512_params.rs  mod.rs
hawk_rust/src/poly/: poly.rs
hawklib/: Cargo.toml
hawklib/src/: fft.rs  fft_constants.rs  hawkkeygen.rs  hawksign.rs  hawkverify.rs  lib.rs  rngcontext.rs  utils.rs
hawklib/src/parameters/: hawk1024_params.rs  hawk256_params.rs  hawk512_params.rs
(+124 files in other folders)
